# AtlasMind-Netra-mcp

./: .dockerignore  .env.example  .gitignore  CONTRIBUTING.md  README.md  _check_key.py  docker-compose.yml  manifest.yml.template  pyproject.toml  server.py  test_integration.py
briefings/: __init__.py  delivery.py
config/: __init__.py  clarification_vocab.json  ranking_default.json  settings.py
confluence/: __init__.py
core/: __init__.py  agenda_decomposer.py  atlasmind_lite_client.py  briefing_orchestrator.py  clarifier.py  exceptions.py  frontend_bridge_client.py  intent_classifier.py  issue_analyser.py  jira_fields_loader.py  llm_provider.py  orchestrator.py  query_intent_analyser.py  ranking_engine.py  report_renderer.py  report_synthesiser.py  vocab_lookup.py
docker/: Dockerfile  entrypoint.sh
memory/: __init__.py  briefing_session_store.py  conventions_store.py  session_store.py  store_factory.py  valkey_stores.py
models/: __init__.py  clarification.py  frontend.py  jira.py  lite.py  ranking.py  responses.py  vocab.py
prompts/: agenda_decomposition_prompt.md  clarification_prompt.md  issue_analysis_prompt.md
scripts/: cf-copy-env.sh  cf-deploy.sh  docker-build-local.sh
tests/: conftest.py  test_agenda_decomposer.py  test_briefing_orchestrator.py  test_clarifier.py  test_conventions_store.py  test_delivery.py  test_frontend_bridge_client.py  test_integration.py  test_intent_classifier.py  test_issue_analyser.py  test_jira_fields_loader.py  test_lite_client.py  test_llm_provider.py  test_orchestrator.py  test_ranking_engine.py  test_server.py  (+6 more)
(+23 files in other folders)
